interm commit for token, auth, app & user login

--- a/node/conf/config.json
+++ b/node/conf/config.json
@@ -47,6 +47,8 @@
             "clientSecret": "5a5d50-example-c867b6efcf969bdcc6a2",
             "rateLimit": "120",
             "rateLimitPeriod": "60",
+            "username": "username",
+            "password": "password",
             "matchAll": true
         },
         {
